# chirper-rs

./: Cargo.toml  shell.nix
migrations/2022-09-15-214456_create_users_table/: up.sql
src/: main.rs  routes.rs  schema.rs  state.rs
