[package]
name = "chirper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"

axum-login = { version = "0.2.0", features = ["sqlite"] }

diesel = { version = "2.0.0", features = ["r2d2", "sqlite"] }

tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
